@@ -1,14 +1,20 @@
 package com.example.authen_session.config;
 
 import com.example.authen_session.component.CustomAuthenticationEntryPoint;
+import com.example.authen_session.jwt.JwtFilter;
+import com.example.authen_session.jwt.JwtLoginFilter;
+import com.example.authen_session.jwt.JwtUtil;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -16,19 +22,28 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.AuthenticationFailureHandler;
 import org.springframework.security.web.authentication.AuthenticationSuccessHandler;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.authentication.logout.LogoutSuccessHandler;
 import org.springframework.security.web.csrf.CsrfToken;
 import org.springframework.web.cors.CorsConfiguration;
 
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
+    private final AuthenticationConfiguration authenticationConfiguration;
     private final CustomAuthenticationEntryPoint customAuthenticationEntryPoint;
+    private final JwtUtil jwtUtil;
+
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
+    }
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -36,102 +51,36 @@ public class SecurityConfig {
     }
 
     @Bean
-    public AuthenticationSuccessHandler authenticationSuccessHandler() {
-        return ((request, response, auth) -> {
-            Map<String, Object> responseData = new HashMap<>();
-            responseData.put("result", "로그인 성공");
-
-            UserDetails userDetails = (UserDetails) auth.getPrincipal();
-            responseData.put("username", userDetails.getUsername());
-            responseData.put("role", userDetails.getAuthorities());
-
-            CsrfToken token = (CsrfToken) request.getAttribute(CsrfToken.class.getName());
-            responseData.put("csrf-token", token.getToken());
-
-            ObjectMapper objectMapper = new ObjectMapper();
-            String jsonMessage = objectMapper.writeValueAsString(responseData);
-
-            response.setStatus(200);
-            response.setContentType("application/json");
-            response.setCharacterEncoding("UTF-8");
-            response.getWriter().write(jsonMessage);
-        });
-    }
-
-    @Bean
-    public AuthenticationFailureHandler authenticationFailureHandler() {
-        return (request, response, auth) -> {
-            Map<String, String> responseData = new HashMap<>();
-            responseData.put("result", "로그인 실패");
-
-            ObjectMapper objectMapper = new ObjectMapper();
-            String jsonMessage = objectMapper.writeValueAsString(responseData);
-
-            response.setStatus(401);
-            response.setContentType("application/json");
-            response.setCharacterEncoding("UTF-8");
-            response.getWriter().write(jsonMessage);
-        };
-    }
-
-    @Bean
-    public LogoutSuccessHandler logoutSuccessHandler() {
-        return (request, response, auth) -> {
-            response.setStatus(200);
-            response.setCharacterEncoding("UTF-8"); // 한글이 들어가면 유니코드 넣어줘야 함.
-            response.getWriter().write("Logout 성공");
-        };
-    }
-
-    @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-//        http.csrf(csrf -> csrf.disable())
-        http.authorizeHttpRequests(authorize -> {
-                    authorize.requestMatchers("/", "/join", "/login", "/csrf-token").permitAll();
+        http.csrf(csrf -> csrf.disable())
+                .formLogin(formLogin -> formLogin.disable())
+                .httpBasic(httpBasic -> httpBasic.disable())
+
+                .authorizeHttpRequests(authorize -> {
+                    authorize.requestMatchers("/", "/join", "/login").permitAll();
                     authorize.requestMatchers("/admin").hasRole("ADMIN");
-                    authorize.requestMatchers("/user").hasAnyRole("USER", "ADMIN");
-                    authorize.requestMatchers("/user/**").hasAnyRole("USER", "ADMIN");
+//                    authorize.requestMatchers("/user").hasAnyRole("USER", "ADMIN");
+//                    authorize.requestMatchers("/user/**").hasAnyRole("USER", "ADMIN");
                     authorize.anyRequest().authenticated();
                 })
-
-                .formLogin(form ->
-                        form.loginProcessingUrl("/login")
-                                .successHandler(authenticationSuccessHandler())
-                                .failureHandler(authenticationFailureHandler())
-                )
-
-                .logout(logout ->
-                        logout.logoutUrl("/logout")
-                                .logoutSuccessHandler(logoutSuccessHandler())
-                                .addLogoutHandler(((request, response, authentication) -> {
-                                    if (request.getSession() != null) {
-                                        request.getSession().invalidate();
-                                    }
-                                    SecurityContextHolder.clearContext();
-                                }))
-                                .deleteCookies("JSESSIONID")
-                )
 
                 .cors(cors -> cors.configurationSource(request -> {
                     CorsConfiguration corsConfiguration = new CorsConfiguration();
                     corsConfiguration.addAllowedOrigin("http://localhost:3000");
 //                    corsConfiguration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://localhost:3001", "http://localhost:3002"));
                     corsConfiguration.addAllowedHeader("*");
-                    corsConfiguration.addAllowedMethod("*");
-//                    corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                    corsConfiguration.setExposedHeaders(List.of("Authorization"));
+                    corsConfiguration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
                     corsConfiguration.setAllowCredentials(true);
                     return corsConfiguration;
                 }))
 
                 .sessionManagement(session ->
-                        session.maximumSessions(1)
-                                .maxSessionsPreventsLogin(false) // 기존 세션을 만료시키고 새로 로그인할 수 있게 된다.
-                                .expiredSessionStrategy(event -> {
-                                    HttpServletResponse response = event.getResponse();
-                                    response.setCharacterEncoding("UTF-8");
-                                    response.getWriter().write("다른 호스트에서 로그인하여 현재 세션이 만료되어있습니다.");
-                                })
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
+
+                .addFilterBefore(new JwtFilter(this.jwtUtil), JwtLoginFilter.class)
+                .addFilterAt(new JwtLoginFilter(authenticationManager(authenticationConfiguration),this.jwtUtil), UsernamePasswordAuthenticationFilter.class)
 
                 .exceptionHandling(exception ->
                         exception.authenticationEntryPoint(this.customAuthenticationEntryPoint)
